@@ -7,6 +7,7 @@ NEW FEATURES
 (raf) UP/DOWN in html now scroll up/down (without R+)
 (raf) UP/DOWN at the top/bottom of a menu list will wrap (user request).
 BUG FIXES
+(raf) Fixed openssl compile options (-mno-explicit-relocs), this fixes the problem where the Links2 plugin wasn't working. (You will need to upgrade openssl from the pspdev svn to rev.2169 or greater).
 
 links-2.1pre23 PSP r1231 (2006-08-09)
 NEW FEATURES
